2014-03-11  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc, resource.cc: (http:accept-encoding, http:decode) new settings.

2014-03-04  Alexander V. Lukyanov <lavv17f@gmail.com>

	* CmdExec.cc, CmdExec.h, commands.cc: keep track of parent CmdExec;
	  add 'exit parent' subcommand; flush command buffer when exiting.
	* SFtp.cc: don't send FSETSTAT when file modification time is unknown.

2014-02-13  Alexander V. Lukyanov <lavv17f@gmail.com>

	* xarray.h, StringSet.h: (xarray_m) new template for malloc'ed
	  pointers; use it in StringSet.
	* xmap.h: (dispose) new method.

2014-02-12  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: don't call ExpandTildeInCWD every time.
	* Http.cc: use a perfect hash for header handling.
	* MirrorJob.cc: clear source/target sets when looping.

2014-02-11  Alexander V. Lukyanov <lavv17f@gmail.com>

	* MirrorJob.cc, MirrorJob.h: fix transfer rate reporting for parallel
	  mode mirror (--parallel option).
	* commands.cc: (--env-password) new open option to take password from
	  LFTP_PASSWORD environment variable.

2014-02-04  Alexander V. Lukyanov <lavv17f@gmail.com>

	* ResMgr.cc, ResMgr.h, resource.cc: move some methods to ResType;
	  make ResMgr a descendant of ResType; make type_value_list a pointer
	  to avoid calling a ctor for each static ResType.
	* Torrent.cc: use ~/.lftp/torrent/md directory; fix file permissions.
	* FileAccess.cc, FileAccess.h: use xlist and xmap to speed up FA
	  creation and deleting.

2014-01-24  Alexander V. Lukyanov <lavv17f@gmail.com>

	* pgetJob.cc: (pget:min-chunk-size) new setting with 1M by default.

2014-01-23  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileAccess.cc, commands.cc, history.cc: don't add a slash if it's
	  already there.
	* xmap.cc: slightly better hash.
	* xarray.h: (xarray_p::qsort) new method.
	* StringSet.h: (StringSet::qsort) new method.
	* ResMgr.cc, ResMgr.h, Http.cc, resource.cc: use xlist and xmap to
	  manage settings (for better performance).