@@ -1,3 +1,7 @@
+2014-03-13  Alexander V. Lukyanov <lavv17f@gmail.com>
+
+	* FileAccess.cc, FileAccess.h: get rid of direct delete calls.
+
 2014-03-11  Alexander V. Lukyanov <lavv17f@gmail.com>
 
 	* Http.cc, resource.cc: (http:accept-encoding, http:decode) new settings.
